docs: atualizar referências de tecnologia nos READMEs
- Java 26 → Java 21 (LTS) em todos os READMEs e scripts
- Remover --enable-preview (Virtual Threads é estável no Java 21)
- Atualizar JAVA_HOME paths (jdk-26/temurin-26 → temurin-21)
- Atualizar Javalin 7.1.0 → 7.2.0 no módulo view.react.javalin
- Adicionar logging multiplataforma (Log facade) na descrição do framework.commons
- Adicionar ScheduledExecutor na descrição do framework.commons